[fix] overflow issue on mobile.

--- a/client/src/components/common/BackSection/BackSection.scss
+++ b/client/src/components/common/BackSection/BackSection.scss
@@ -18,10 +18,6 @@
     box-shadow: 0 2px 5px rgba($color: #000000, $alpha: 0.15);
   }
 
-  &--aligned-with-content &__wrapper {
-    left: 2.5em;
-  }
-
   &__wrapper {
     position: relative;
     display: flex;
